kube-configs/resources/services-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: service-world-ingress
  namespace: customer
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - my-aks-ingress.eastus2.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: my-aks-ingress.eastus2.cloudapp.azure.com
    http:
      paths:
      - path: /product
        backend:
          serviceName: product-service
          servicePort: 80
      - path: /customer
        backend:
          serviceName: customer-service
          servicePort: 80
